<?xml version="1.0"?>
<package format="2">
  <name>spider_body_kinematics</name>
  <version>0.0.0</version>
  <description>The spider_body_kinematics package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <!-- <maintainer email="xabier@erlerobot.com">Xabier Apraiz San Vicente</maintainer> -->
  <maintainer email="anita@erlerobotics.com">Anita Inchauspe Berasain</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/spider_rpy_kinematics</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="tuuzdu@mail.ru"></author>
  <author email="xabier@erlerobot.com">Xabier Apraiz San Vicente</author>
  <author email="anita@erlerobotics.com">Anita Inchauspe Berasain</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- <buildtool_depend>catkin</buildtool_depend> -->
  <buildtool_depend>ament</buildtool_depend> <!-- catkin now its ament -->
   <build_depend>orocos_kdl</build_depend> 

  <!-- <build_depend>roscpp</build_depend> -->
  <build_depend>rclcpp</build_depend> <!-- ROS Client Library for C++ (rclcpp), instead of roscpp -->
  <!-- <build_depend>rospy</build_depend> Not needed -->

  <!-- <build_depend>std_msgs</build_depend> -->
  <build_depend>common_interfaces</build_depend>
  <!-- <run_depend>orocos_kdl</run_depend> -->
  <exec_depend>orocos_kdl</exec_depend>
  <!-- <run_depend>roscpp</run_depend> -->
  <exec_depend>rclcpp</exec_depend>
  <!-- <run_depend>rospy</run_depend> not necessary-->

  <!-- <run_depend>std_msgs</run_depend> -->
  <exec_depend>common_interfaces</exec_depend>

  <!-- ament test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <build_type>ament_cmake</build_type>  
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
